added grind for photos, about me

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Natasha's Nail Salon</title>
+  <title>Alf nails art</title>
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -38,8 +38,8 @@
     <div class="main-navbar">
       <div class="logo">
         <div class="est">EST | 2020</div>
-        <div class="brand-name">natasha's nail salon</div>
-        <div class="subtext">PROFESSIONAL<br>NAIL SALON</div>
+        <div class="brand-name">ALF NAILS ART</div>
+        <div class="subtext">PROFESSIONAL<br>NAIL ART</div>
       </div>
       <nav class="nav-links">
         <a href="#" class="active">Services</a>
@@ -51,20 +51,77 @@
 
 <div class="full-width-image">
   <img 
-    src="https://t4.ftcdn.net/jpg/04/70/67/55/240_F_470675549_Ds2r3NvnGoKLCyFNqZEDNOByvym0saGY.jpg"
+    src="/resources/css/images/main1.jpg"
     alt="Decorative Background"
   />
   <div class="hero-text">
-    <h4>WELCOME TO NATASHAS NAIL SALON</h4>
-    <h1>Premium Russian<br>Manicure services</h1>
+    <h4>WELCOME TO ALF NAILS ART</h4>
+    <h1>Premium European<br>Manicure services</h1>
     <p>Trained abroad by master nail artists, Natasha brings elite techniques to her salon.</p>
     <a href="#book" class="cta-button">BOOK NOW</a>
   </div>
 </div>
 
 </div>
+    <section class="manicure-showcase">
+  <div class="manicure-card">
+    <img src="./resources/css/images/photo_2025-05-11_12-02-41.jpg" alt="Classic Manicure">
+    <h3>Classic Manicure</h3>
+    <p>Clean, elegant, and timeless looks for any occasion.</p>
+  </div>
+  <div class="manicure-card">
+    <img src="./resources/css/images/photo_2025-05-11_12-03-18.jpg" alt="Gel Manicure">
+    <h3>Gel Manicure</h3>
+    <p>Long-lasting shine with vibrant color options.</p>
+  </div>
+  <div class="manicure-card">
+    <img src="./resources/css/images/photo_2025-05-11_12-03-34.jpg" alt="French Tips">
+    <h3>French Tips</h3>
+    <p>Chic and modern styles with a European twist.</p>
+  </div>
+</section>
+    <section class="about-section">
+  <div class="about-image">
+    <img src="./resources/css/images/natasha.jpg" alt="About Natasha">
+  </div>
+  <div class="about-text">
+    <h2>About Natasha</h2>
+    <p>
+      With over a decade of experience and international training, Natasha brings the art of the Russian manicure to her clients with precision and care. Her attention to detail and passion for perfection have made her salon one of the most trusted in the area.
+    </p>
+    <p>
+      Whether you're looking for a natural look or something bold, Natasha customizes each service to meet your style and needs.
+    </p>
+  </div>
+</section>
 
   </main>
 
 </body>
+<footer>
+  <div class="footer-content">
+    <div class="footer-section footer-logo">
+      <div class="est">EST | 2020</div>
+      <div class="brand-name">ALF NAILS ART</div>
+      <div class="subtext">PROFESSIONAL<br>NAIL SALON</div>
+    </div>
+
+    <div class="footer-section footer-nav">
+      <p class="location">Our Location</p>
+      <a href="https://maps.google.com/?q=4200+N+Lamar+BLVD">
+        <i class="fa fa-map-marker"></i> 542 E Avenue J
+      </a>
+      <a href="tel:+12243834135"><i class="fa fa-phone"></i> (224) 383-4135</a>
+      <span><i class="fa fa-clock-o"></i> Tue – Sat: 09:00am – 05:00pm</span>
+    </div>
+
+    <div class="footer-section footer-social">
+      <p>Follow Us</p>
+      <a href="https://instagram.com/YOUR_HANDLE" target="_blank"><i class="fa fa-instagram"></i> Instagram</a><br>
+      <a href="https://facebook.com/YOUR_PAGE" target="_blank"><i class="fa fa-facebook"></i> Facebook</a>
+    </div>
+  </div>
+  <p style="text-align: right; padding: 10px 0; color: white;">&copy; 2023 Natasha's Nail Salon. All rights reserved.</p>
+</footer>
+
 </html>
