--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Alf nails art</title>
 
   <!-- Google Fonts -->
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Tangerine:wght@400;700&family=WindSong:wght@400;500&display=swap" rel="stylesheet" />
 
   <!-- Font Awesome -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 
   <!-- External CSS -->
   <link rel="stylesheet" href="./resources/css/styles.css" />
@@ -20,13 +20,6 @@
 
   <!-- Top Bar -->
   <div class="top-bar">
-    <div class="top-left">
-      <a href="https://maps.google.com/?q=4200+N+Lamar+BLVD">
-        <i class="fa fa-map-marker"></i> 542 E Avenue J
-      </a>
-      <span><i class="fa fa-clock-o"></i> Tue – Sat: 09:00am – 05:00pm</span>
-      <a href="tel:+12243834135"><i class="fa fa-phone"></i> (224) 383-4135</a>
-    </div>
     <div class="top-right">
       <a href="https://instagram.com/YOUR_INSTAGRAM_HANDLE" target="_blank"><i class="fa fa-instagram"></i></a>
       <a href="https://facebook.com/YOUR_FACEBOOK_PAGE" target="_blank"><i class="fa fa-facebook"></i></a>
@@ -35,69 +28,78 @@
 
   <!-- Main Navbar -->
   <main>
-    <div class="main-navbar">
-      <div class="logo">
-        <div class="est">EST | 2020</div>
-        <div class="brand-name">ALF NAILS ART</div>
-        <div class="subtext">PROFESSIONAL<br>NAIL ART</div>
+<div class="main-navbar">
+  <a href="index.html" class="logo">
+    <div class="brand-name">ALF NAILS ART</div>
+    <div class="est">EST | 2020</div>
+    <div class="subtext">PROFESSIONAL<br>NAIL ART</div>
+  </a>
+    <button class="menu-toggle" onclick="toggleMenu()">
+        <i class="fa fa-bars"></i>
+    </button>
+
+  <nav class="nav-links" id="navMenu">
+    <a href="services.html">Services</a>
+    <a href="#about">About Me</a> <!-- Anchor link to the About section -->
+    <a href="gallery.html">FAQ / Policy</a>
+    <a href="contact.html">Contact Us</a>
+</nav>
+
+</div>
+
+
+    <div class="full-width-image">
+      <img src="/resources/css/images/main1.jpg" alt="Decorative Background" />
+      <div class="hero-text">
+        <h4>WELCOME TO ALF NAILS ART</h4>
+        <h1>Premium European<br>Manicure services</h1>
+        <p>Trained abroad by master nail artists, Natasha brings elite techniques to her salon.</p>
+        <a href="#book" class="cta-button">BOOK NOW</a>
       </div>
-      <nav class="nav-links">
-        <a href="#" class="active">Services</a>
-        <a href="#">Team</a>
-        <a href="#">Policy/FAQ</a>
-        <a href="#">Contact Us</a>
-      </nav>
+
     </div>
-
-<div class="full-width-image">
-  <img 
-    src="/resources/css/images/main1.jpg"
-    alt="Decorative Background"
-  />
-  <div class="hero-text">
-    <h4>WELCOME TO ALF NAILS ART</h4>
-    <h1>Premium European<br>Manicure services</h1>
-    <p>Trained abroad by master nail artists, Natasha brings elite techniques to her salon.</p>
-    <a href="#book" class="cta-button">BOOK NOW</a>
-  </div>
-</div>
-
-</div>
+        <section class="about-section" id="about">
+      <div class="about-image">
+        <img src="./resources/css/images/natasha.jpg" alt="About Me">
+      </div>
+      <div class="about-text">
+        <h2 class="about">About Me</h2>
+        <p>
+          With over a decade of experience and international training, Natasha brings the art of the Russian manicure to her clients with precision and care. Her attention to detail and passion for perfection have made her salon one of the most trusted in the area.
+        </p>
+        <p>
+          Whether you're looking for a natural look or something bold, Natasha customizes each service to meet your style and needs.
+        </p>
+      </div>
+    </section>
+    
     <section class="manicure-showcase">
-  <div class="manicure-card">
-    <img src="./resources/css/images/photo_2025-05-11_12-02-41.jpg" alt="Classic Manicure">
-    <h3>Classic Manicure</h3>
-    <p>Clean, elegant, and timeless looks for any occasion.</p>
-  </div>
-  <div class="manicure-card">
-    <img src="./resources/css/images/photo_2025-05-11_12-03-18.jpg" alt="Gel Manicure">
-    <h3>Gel Manicure</h3>
-    <p>Long-lasting shine with vibrant color options.</p>
-  </div>
-  <div class="manicure-card">
-    <img src="./resources/css/images/photo_2025-05-11_12-03-34.jpg" alt="French Tips">
-    <h3>French Tips</h3>
-    <p>Chic and modern styles with a European twist.</p>
-  </div>
-</section>
-    <section class="about-section">
-  <div class="about-image">
-    <img src="./resources/css/images/natasha.jpg" alt="About Natasha">
-  </div>
-  <div class="about-text">
-    <h2>About Natasha</h2>
-    <p>
-      With over a decade of experience and international training, Natasha brings the art of the Russian manicure to her clients with precision and care. Her attention to detail and passion for perfection have made her salon one of the most trusted in the area.
-    </p>
-    <p>
-      Whether you're looking for a natural look or something bold, Natasha customizes each service to meet your style and needs.
-    </p>
-  </div>
-</section>
-
+      <div class="manicure-card">
+        <img src="./resources/css/images/photo_2025-05-11_12-02-41.jpg" alt="Classic Manicure">
+        <h3>Classic Manicure</h3>
+        <p>Clean, elegant, and timeless looks for any occasion.</p>
+      </div>
+      <div class="manicure-card">
+        <img src="./resources/css/images/photo_2025-05-11_12-03-18.jpg" alt="Gel Manicure">
+        <h3>Gel Manicure</h3>
+        <p>Long-lasting shine with vibrant color options.</p>
+      </div>
+      <div class="manicure-card">
+        <img src="./resources/css/images/photo_2025-05-11_12-03-34.jpg" alt="French Tips">
+        <h3>French Tips</h3>
+        <p>Chic and modern styles with a European twist.</p>
+      </div>
+    </section>
   </main>
+  <script>
+  function toggleMenu() {
+    const nav = document.getElementById('navMenu');
+    nav.classList.toggle('show');
+  }
+</script>
 
 </body>
+
 <footer>
   <div class="footer-content">
     <div class="footer-section footer-logo">
