--- a/faq.html
+++ b/faq.html
@@ -44,3 +44,29 @@
     <a href="gallery.html">FAQ / Policy</a>
     <a href="contact.html">Contact Us</a>
 </nav>
+<footer>
+  <div class="footer-content">
+    <!-- Left Section: Logo and Description -->
+    <div class="footer-section footer-logo">
+      <a href="index.html" class="logo">
+        <div class="est">EST | 2025</div>
+        <div class="brand-name">ALF NAILS ART</div>
+        <div class="subtext">PROFESSIONAL<br>NAIL ART</div>
+      </a>
+      </p>
+    </div>
+
+    <!-- Right Section: Location -->
+    <div class="footer-section footer-location">
+      <h3 class="footer-title">Our Location</h3>
+      <p><i class="fa fa-map-marker"></i> 4200 N Lamar Blvd, Suite 150, Austin, TX, 78556</p>
+      <p><i class="fa fa-phone"></i> (737) 727-00-87</p>
+      <p><i class="fa fa-clock-o"></i> Mon - Sat 09:00am - 06:00pm</p>
+    </div>
+  </div>
+
+  <p class="footer-copyright">
+    &copy; 2025 Alf Nails Art. All rights reserved.
+  </p>
+</footer>
+</html>
