--- a/contact.html
+++ b/contact.html
@@ -3,35 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Alf nails art</title>
-
-  <!-- Google Fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Tangerine:wght@400;700&family=WindSong:wght@400;500&display=swap" rel="stylesheet" />
-
-  <!-- Font Awesome -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
-
-  <!-- External CSS -->
-  <link rel="stylesheet" href="./resources/css/styles.css" />
-</head>
-<body>
-
-  <!-- Top Bar -->
-  <div class="top-bar">
-    <div class="top-left">
-      <a href="https://maps.google.com/?q=4200+N+Lamar+BLVD">
-        <i class="fa fa-map-marker"></i> 542 E Avenue J
-      </a>
-      <span><i class="fa fa-clock-o"></i> Tue – Sat: 09:00am – 05:00pm</span>
-      <a href="tel:+12243834135"><i class="fa fa-phone"></i> (224) 383-4135</a>
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Alf nails art</title>
+  <title>Alf Nails Art</title>
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -55,23 +27,34 @@
   </div>
 
   <!-- Main Navbar -->
-  <main>
-<div class="main-navbar">
-  <a href="index.html" class="logo">
-    <div class="brand-name">ALF NAILS ART</div>
-    <div class="est">EST | 2020</div>
-    <div class="subtext">PROFESSIONAL<br>NAIL ART</div>
-  </a>
-    <button class="menu-toggle" onclick="toggleMenu()">
+  <header>
+    <div class="main-navbar">
+      <a href="index.html" class="logo">
+        <div class="brand-name">ALF NAILS ART</div>
+        <div class="est">EST | 2020</div>
+        <div class="subtext">PROFESSIONAL<br>NAIL ART</div>
+      </a>
+      <button class="menu-toggle" onclick="toggleMenu()">
         <i class="fa fa-bars"></i>
-    </button>
+      </button>
+      <nav class="nav-links" id="navMenu">
+        <a href="services.html">Services</a>
+        <a href="index.html#about">About Me</a>
+        <a href="faq.html">FAQ / Policy</a>
+        <a href="contact.html">Contact Us</a>
+      </nav>
+    </div>
+  </header>
+  <!-- Hero Section -->
+  <div class="selection-image">
+    <img src="./resources/css/images/stick.jpg" alt="Decorative Background" />
+    <h1 class="hero-title">FAQ / Policy</h1>
+  </div>
+  <section>
+    
+  </section>
 
-  <nav class="nav-links" id="navMenu">
-    <a href="services.html">Services</a>
-    <a href="#about">About Me</a> <!-- Anchor link to the About section -->
-    <a href="gallery.html">FAQ / Policy</a>
-    <a href="contact.html">Contact Us</a>
-</nav>
+</body>
 <footer>
   <div class="footer-content">
     <!-- Left Section: Logo and Description -->
