--- a/faq.html
+++ b/faq.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Alf nails art</title>
+  <title>Alf Nails Art</title>
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -27,23 +27,74 @@
   </div>
 
   <!-- Main Navbar -->
-  <main>
-<div class="main-navbar">
-  <a href="index.html" class="logo">
-    <div class="brand-name">ALF NAILS ART</div>
-    <div class="est">EST | 2020</div>
-    <div class="subtext">PROFESSIONAL<br>NAIL ART</div>
-  </a>
-    <button class="menu-toggle" onclick="toggleMenu()">
+  <header>
+    <div class="main-navbar">
+      <a href="index.html" class="logo">
+        <div class="brand-name">ALF NAILS ART</div>
+        <div class="est">EST | 2020</div>
+        <div class="subtext">PROFESSIONAL<br>NAIL ART</div>
+      </a>
+      <button class="menu-toggle" onclick="toggleMenu()">
         <i class="fa fa-bars"></i>
-    </button>
+      </button>
+      <nav class="nav-links" id="navMenu">
+        <a href="services.html">Services</a>
+        <a href="index.html#about">About Me</a>
+        <a href="faq.html">FAQ / Policy</a>
+        <a href="contact.html">Contact Us</a>
+      </nav>
+    </div>
+  </header>
+  <!-- Hero Section -->
+  <div class="selection-image">
+    <img src="./resources/css/images/stick.jpg" alt="Decorative Background" />
+    <h1 class="hero-title">FAQ / Policy</h1>
+  </div>
+  <section class="faq-section">
+    <article>
+      <h2 class="faq-title">FAQ / POLICY</h2>
 
-  <nav class="nav-links" id="navMenu">
-    <a href="services.html">Services</a>
-    <a href="#about">About Me</a> <!-- Anchor link to the About section -->
-    <a href="gallery.html">FAQ / Policy</a>
-    <a href="contact.html">Contact Us</a>
-</nav>
+      <div class="faq-item">
+        <h3>DEPOSITS</h3>
+        <ul>
+          <li>A NONREFUNDABLE DEPOSIT WILL BE REQUIRED TO RESERVE YOUR APPOINTMENT. THIS DEPOSIT WILL GO TOWARD YOUR SERVICE. ONCE A DEPOSIT IS MADE AND YOUR APPOINTMENT IS SECURED, IT IS NONREFUNDABLE.</li>
+          <li>IF YOU TRY TO BOOK AN APPOINTMENT THROUGH THE SQUARE APP WITHOUT THE DEPOSIT, THAT APPOINTMENT WILL BE CANCELED, AND THAT SLOT WILL BECOME AVAILABLE TO ANYONE WHO SECURES PAYMENT FIRST. IF IT HAPPENS A SECOND TIME, I CANNOT BE YOUR NAIL TECHNICIAN. PLEASE RESPECT ME AS I RESPECT YOU.</li>
+        </ul>
+      </div>
+
+      <div class="faq-item">
+        <h3>CANCELLATIONS AND RESCHEDULING</h3>
+        <ul>
+          <li>YOU ARE GIVEN A MINIMUM OF 72 HOURS TO RESCHEDULE YOUR APPOINTMENT. YOUR DEPOSIT WILL AUTOMATICALLY BE FORFEITED WITH LESS THAN A 72-HOUR NOTICE.</li>
+          <li>IF YOU CANCEL OR RESCHEDULE YOUR APPOINTMENT 24 HOURS BEFORE YOUR SCHEDULED APPOINTMENT OR IF YOU NO-SHOW, YOUR CREDIT CARD WILL BE CHARGED 100% OF THE TOTAL SCHEDULED SERVICES MINUS THE DEPOSIT FEE.</li>
+        </ul>
+      </div>
+
+      <div class="faq-item">
+        <h3>LATE ARRIVALS SERVICES</h3>
+        <ul>
+          <li>IF YOU ARE OVER 10 MINUTES LATE, YOU WILL BE CHARGED AN ADDITIONAL $15 LATE FEE ON TOP OF YOUR SERVICE.</li>
+          <li>IF YOU ARE OVER 15 MINUTES LATE, YOU WILL BE CANCELED AND AUTOMATICALLY CHARGED THE FULL AMOUNT.</li>
+          <li>IF YOU ARE OVER 10 MINUTES LATE TO 3 CONSECUTIVE APPOINTMENTS IN A ROW, YOU WILL AUTOMATICALLY BE TERMINATED AS A CLIENT. NO EXCEPTIONS.</li>
+        </ul>
+      </div>
+
+      <div class="faq-item">
+        <h3>72 HOUR CLIENT SATISFACTION</h3>
+        <ul>
+          <li>YOU ARE GIVEN 72 HOURS TO LET ME KNOW IF THERE ARE ANY PROBLEMS WITH YOUR NAILS FOR A COMPLIMENTARY FIX. AFTER 72 HOURS, I AM NO LONGER RESPONSIBLE FOR ANYTHING THAT HAPPENS TO YOUR NAILS.</li>
+        </ul>
+      </div>
+
+      <div class="faq-item">
+        <h3>REFUNDS</h3>
+        <ul>
+          <li>I DO NOT OFFER REFUNDS ON ANY OF MY SERVICES. ALL SERVICES ARE FINAL SALE.</li>
+        </ul>
+      </div>
+    </article>
+  </section>
+</body>
 <footer>
   <div class="footer-content">
     <!-- Left Section: Logo and Description -->
