--- a/services.html
+++ b/services.html
@@ -40,7 +40,7 @@
       <nav class="nav-links" id="navMenu">
         <a href="services.html">Services</a>
         <a href="index.html#about">About Me</a>
-        <a href="gallery.html">FAQ / Policy</a>
+        <a href="faq.html">FAQ / Policy</a>
         <a href="contact.html">Contact Us</a>
       </nav>
     </div>
