--- a/faq.html
+++ b/faq.html
@@ -94,6 +94,7 @@
       </div>
     </article>
   </section>
+  <script src="./resources/js/menu.js"></script>
 </body>
 <footer>
   <div class="footer-content">
