--- a/services.html
+++ b/services.html
@@ -128,7 +128,6 @@
         </div>
       </div>
     </div>
-  </main>
 
   <!-- Scripts -->
   <script>
@@ -158,6 +157,7 @@
       showServicesSlides();
     }
   </script>
+  <script src="./resources/js/menu.js"></script>
 </body>
 <footer>
   <div class="footer-content">
