--- a/index.html
+++ b/index.html
@@ -125,7 +125,8 @@
       track.style.transform = `translateX(-${currentIndex * slideWidth}px)`;
     }
   </script>
-  <script src="./resources/js/menu.js"></script>
+  <script src="/resources/js/menu.js"></script>
+
 
 </body>
 <footer>
