--- a/services.html
+++ b/services.html
@@ -157,7 +157,7 @@
       showServicesSlides();
     }
   </script>
-  <script src="./resources/js/menu.js"></script>
+  <script src="/resources/js/menu.js"></script>
 </body>
 <footer>
   <div class="footer-content">
