--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,8 @@
     
   </section>
 
-  <script src="./resources/js/menu.js"></script>
+  <script src="/resources/js/menu.js"></script>
+
 </body>
 <footer>
   <div class="footer-content">
