--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,35 @@
     <h1 class="hero-title">FAQ / Policy</h1>
   </div>
   <section>
-    
+  <section class="contact-section">
+  <h2>Contact Us</h2>
+  
+  <div class="contact-wrapper">
+  <div class="contact-container">
+    <form class="contact-form" action="mailto:your@email.com" method="POST" enctype="text/plain">
+      <label for="name">Name:</label>
+      <input type="text" id="name" name="name" required />
+
+      <label for="email">Email:</label>
+      <input type="email" id="email" name="email" required />
+
+      <label for="message">Message:</label>
+      <textarea id="message" name="message" rows="5" required></textarea>
+
+      <button type="submit">Send Message</button>
+    </form>
+  </div>
+</div>
+
+
+      <!-- Google Map Embed -->
+      <div class="map-container">
+        <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3443.8570824553623!2d-97.7338743!3d30.3131641!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8644b59fe029e7f7%3A0x97d6e607eeb91b6f!2s4200%20N%20Lamar%20Blvd%20%23150%2C%20Austin%2C%20TX%2078756!5e0!3m2!1sen!2sus!4v1623783767842!5m2!1sen!2sus"
+        width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+      </div>
+    </div>
+  </section>    
   </section>
 
   <script src="/resources/js/menu.js"></script>
