--- a/faq.html
+++ b/faq.html
@@ -94,7 +94,8 @@
       </div>
     </article>
   </section>
-  <script src="/resources/js/menu.js"></script>
+  <script src="./resources/js/menu.js"></script>
+
 </body>
 <footer>
   <div class="footer-content">
