--- a/contact.html
+++ b/contact.html
@@ -82,7 +82,8 @@
   </section>    
   </section>
 
-  <script src="/resources/js/menu.js"></script>
+  <script src="./resources/js/menu.js"></script>
+
 
 </body>
 <footer>
