--- a/index.html
+++ b/index.html
@@ -72,62 +72,12 @@
       <img src="./resources/css/images/natasha.jpg" alt="About Me">
     </div>
   </section>
+<!-- Fullscreen Modal -->
+<div class="modal" onclick="closeModal()">
+  <img class="modal-content" id="expanded-image" src="" alt="">
+</div>
 
-  <!-- Carousel Section -->
-  <div class="carousel-container">
-    <div class="carousel-track">
-      <div class="carousel-slide">
-        <img src="./resources/css/images/slide1.jpg" alt="Slide 1">
-      </div>
-      <div class="carousel-slide">
-        <img src="./resources/css/images/slide2.jpg" alt="Slide 2">
-      </div>
-      <div class="carousel-slide">
-        <img src="./resources/css/images/slide3.jpg" alt="Slide 3">
-      </div>
-      <div class="carousel-slide">
-        <img src="./resources/css/images/slide4.jpg" alt="Slide 4">
-      </div>
-      <div class="carousel-slide">
-        <img src="./resources/css/images/slide5.jpg" alt="Slide 5">
-      </div>
-    </div>
-    <button class="carousel-button prev" onclick="moveCarousel(-1)">&#10094;</button>
-    <button class="carousel-button next" onclick="moveCarousel(1)">&#10095;</button>
-  </div>
-
-  <!-- Scripts -->
-  <script>
-    function toggleMenu() {
-      const navMenu = document.getElementById('navMenu');
-      navMenu.classList.toggle('show');
-    }
-
-    let currentIndex = 0;
-
-    function moveCarousel(direction) {
-      const track = document.querySelector(".carousel-track");
-      const slides = document.querySelectorAll(".carousel-slide");
-      const totalSlides = slides.length;
-
-      // Calculate the new index
-      currentIndex += direction;
-
-      // Wrap around if the index goes out of bounds
-      if (currentIndex < 0) {
-        currentIndex = totalSlides - 1;
-      } else if (currentIndex >= totalSlides) {
-        currentIndex = 0;
-      }
-
-      // Move the track
-      const slideWidth = slides[0].getBoundingClientRect().width;
-      track.style.transform = `translateX(-${currentIndex * slideWidth}px)`;
-    }
-  </script>
-  <script src="/resources/js/menu.js"></script>
-
-
+  <script src="./resources/js/menu.js"></script>
 </body>
 <footer>
   <div class="footer-content">
